--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         Department "Information and intellectual property"
         faculty "Computer and information technology" National technical university "Kharkiv polytechnical institute"
     </div>
+    <p>New line in file</p>
 </body>
 </html>
